Update: SVG 表示用の HTML を変更

--- a/docs/main.css
+++ b/docs/main.css
@@ -1,8 +1,8 @@
 body {
 	font-family: sans-serif;
-	background-color: #a0ffa0;
+	background-color: #bfb;
 }
 
-.output {
+.alignfull {
 	width: 100%;
 }
